# flutter-doom

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutterdoom/: MainActivity.kt
android/app/src/main/linuxdoom-1.10/: am_map.c  d_main.c  d_main.h  d_net.c  dart_interface.c  debug.h  doomtype.h  g_game.c  i_video.c  m_misc.c  p_setup.c  r_data.c  r_main.c  r_things.c  s_sound.c  st_stuff.c  v_video.c  w_wad.c  wi_stuff.c  z_zone.c
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: doom.dart  engine.dart  keyboard.dart  main.dart
lib/keyboard/: ascii_keys.dart  bottom_keys.dart  directional_keys.dart  fire_key.dart  single_key.dart  top_keys.dart  upper_keys.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
linuxdoom-1.10/: am_map.c  d_main.c  d_main.h  dart_interface.h  f_wipe.c  g_game.c  hu_stuff.c  i_main.c  i_net.c  i_net.h  i_sound.c  i_system.c  i_video.c  m_bbox.h  m_menu.c  r_draw.c  v_video.c  w_wad.c
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
